prevented overlapping reports by adding an overlap validation using validates_overlap gem

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -66,3 +66,7 @@ body {
 
   padding: 20px;
 }
+
+.has-error {
+  color: red;
+}
